--- a/app/src/main/res/layout/activity_givemoney.xml
+++ b/app/src/main/res/layout/activity_givemoney.xml
@@ -53,41 +53,57 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
             android:orientation="horizontal">
 
-            <EditText
-                android:id="@+id/edtname"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0"
+            <AutoCompleteTextView
+                android:id="@+id/etname"
+                android:layout_width="250dp"
+                android:layout_height="match_parent"
+                android:background="@drawable/textbg"
                 android:ems="10"
-                android:hint="Name"
                 android:inputType="textPersonName" />
 
             <ImageView
                 android:id="@+id/imgcontact"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="0"
                 android:src="@drawable/ic_group_add_black_24dp" />
 
         </LinearLayout>
 
-        <EditText
-            android:id="@+id/edtamount"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="Amount"
-            android:inputType="textPersonName|number" />
+            android:layout_height="50dp"
+            android:layout_marginBottom="5dp"
+            android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/edtdes"
+            <EditText
+                android:id="@+id/etgiveamount"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/textbg"
+                android:ems="10"
+                android:hint="Amount"
+                android:inputType="textPersonName|number" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="Description"
-            android:inputType="textPersonName" />
+            android:layout_height="50dp"
+            android:layout_marginBottom="5dp"
+            android:orientation="vertical">
+
+            <EditText
+                android:id="@+id/etgivedes"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/textbg"
+                android:ems="10"
+                android:hint="Description"
+                android:inputType="textPersonName" />
+        </LinearLayout>
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -97,14 +113,17 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginBottom="5dp"
                 android:layout_weight="1"
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/tvcdate"
+                    android:id="@+id/tvgivecdate"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:background="@drawable/textbg"
+                    android:gravity="center"
                     android:hint="Date"
                     android:textSize="18sp" />
 
@@ -119,16 +138,17 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_below="@+id/des"
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/tvduedate"
+                    android:id="@+id/tvgiveduedate"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:gravity="left"
+                    android:background="@drawable/textbg"
+                    android:gravity="center"
                     android:hint="Due Date"
                     android:textSize="18sp" />
 
