--- a/app/src/main/res/layout/activity_take_money.xml
+++ b/app/src/main/res/layout/activity_take_money.xml
@@ -54,13 +54,12 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <EditText
-                android:id="@+id/edtname"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
+            <AutoCompleteTextView
+                android:id="@+id/ettakename"
+                android:layout_width="250dp"
+                android:layout_height="match_parent"
+                android:background="@drawable/textbg"
                 android:ems="10"
-                android:hint="Name"
                 android:inputType="textPersonName" />
 
             <ImageView
