--- a/app/src/main/res/layout/activity_take_money.xml
+++ b/app/src/main/res/layout/activity_take_money.xml
@@ -152,6 +152,11 @@
             </LinearLayout>
         </LinearLayout>
 
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/takeimg"/>
+
     </LinearLayout>
 
 
