--- a/app/src/main/res/layout/activity_userdashboard.xml
+++ b/app/src/main/res/layout/activity_userdashboard.xml
@@ -18,8 +18,23 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="20dp"
             android:layout_weight="1"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/imgbackup"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:paddingRight="20dp"
+                app:srcCompat="@drawable/ic_settings" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="5dp"
+            android:layout_weight=".88"
             android:orientation="vertical">
 
             <ImageView
@@ -52,7 +67,7 @@
             android:layout_marginLeft="45dp"
             android:layout_marginTop="20dp"
             android:layout_marginRight="45dp"
-            android:layout_weight=".50"
+            android:layout_weight=".40"
             android:background="@drawable/user1"
             android:gravity="bottom"
             android:orientation="vertical">
@@ -155,7 +170,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight=".90"
             android:gravity="center"
             android:orientation="horizontal">
 
