--- a/app/src/main/res/layout/takelist.xml
+++ b/app/src/main/res/layout/takelist.xml
@@ -2,12 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:background="@android:drawable/editbox_background"
+    android:orientation="horizontal">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:drawable/editbox_background"
+        android:layout_weight=".30"
         android:orientation="vertical">
 
         <LinearLayout
@@ -56,6 +57,18 @@
                 android:layout_weight=".50" />
         </LinearLayout>
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/imgtakecontact"/>
     </LinearLayout>
 
 </LinearLayout>
